# Pyovis

./: .env  .gitignore  .telegram_chat_id  ARCHITECTURE.md  Cargo.toml  ESCALATION_FOLLOWUP_TEST.md  IMPROVEMENTS.md  IMPROVEMENTS_PHASE5.md  PHASE4_PLAN.md  PHASE5_COMPLETE.md  README.md  V5_IMPLEMENTATION_AUDIT.md  V5_QUICK_REFERENCE.txt  boot_summary.txt  download_models.sh  pyovis_v5_1.md  pyovis_v5_3.md  pyovis_v5_3_ko.md  pyovis_v5_architecture.md  pyproject.toml  pyvis_core.pyi  run_qna.py  run_telegram_bot.py  run_unified.py
.sisyphus/: boulder.json
.sisyphus/evidence/: pyvis_v4_part1.md  pyvis_v4_part2.md  pyvis_v4_part3.md  pyvis_v4_part4.md  task-1-yaml-parse.txt  task-4-hands-model.txt  task-8-cross-file-qa.txt  task-9-doc-accuracy-qa.txt  task-f1-plan-compliance.txt  task-f2-code-quality.txt  task-f3-scope-fidelity.txt
.sisyphus/plans/: docs-refresh-and-role-context.md  (+1 more)
config/: unified_node.yaml
docs_archive/: Pyvis_v4.md  Pyvis_v4_KO.md  TODO.md  TODO_kr.md  chatchain.md
pyovis/: __init__.py  cli.py  main.py
pyovis_core/: Cargo.toml
qna_bot/: __init__.py  app.py  context_loader.py  llm_client.py
scripts/: e2e_test.py  profile_swap.sh  start_model.sh  stress_test.py  validate_hardware.sh
tests/: test_ai_modules.py  test_chat_chain.py  test_e2e_loop.py  test_e2e_v5_pipeline.py  test_file_writer.py  test_graph_builder.py  test_hard_limit.py  test_infra_modules.py  test_judge_enhanced.py  test_neo4j_integration.py  test_phase5_integration.py  test_request_analyzer.py  test_search_replace.py  test_symbol_extractor.py  test_task_classification.py
(+67 files in other folders)
