[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyovis"
version = "0.1.0"
description = "Pyovis v4.0 - Personal AI Assistant & Research Agent"
# readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "docker>=6.0.0",
    "uvloop>=0.17.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
pyovis = "pyovis.cli:main"

[tool.maturin]
python-source = "."
module-name = "pyovis_core"
manifest-path = "pyovis_core/Cargo.toml"
